# Visualizador-rust

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/adaptadores/: Cargo.toml
crates/adaptadores/src/: lib.rs  postgres.rs  rabbitmq.rs  validacion_mensajes.rs
crates/adaptadores/src/postgres/: estado.rs  mod.rs  persistencia.rs  recorrido.rs  repo_sync.rs
crates/adaptadores/tests/: persistencia_postgres.rs
crates/api/: Cargo.toml
crates/api/src/: dashboard.rs  main.rs  operations.rs  settings.rs  sumologic.rs  usuarios.rs
crates/dominio/: Cargo.toml
crates/dominio/src/: errores.rs  estado.rs  lib.rs  mensajes.rs  puertos.rs  sistema.rs
infra/k8s/: deployment.yaml  secret.example.yaml  service.yaml
migrations/: 20260705000100_bootstrap.sql  20260706000100_add_id_estacion_recorridos.sql  20260706000200_add_movimiento_columns_recorridos.sql  20260706000300_align_estado_bicicletas.sql  20260706000400_align_ts_schema.sql  20260706000500_require_id_estacion_not_null.sql
openspec/: project.md
openspec/changes/00-bootstrap/: design.md  proposal.md  tasks.md
openspec/changes/00-bootstrap/specs/bootstrap/: spec.md
openspec/changes/00-bootstrap/specs/developer-workspace/: spec.md
openspec/changes/00-bootstrap/specs/event-ingestion/: spec.md
openspec/changes/00-bootstrap/specs/postgres-persistence/: spec.md
openspec/changes/00-bootstrap/specs/realtime-dashboard/: spec.md
openspec/changes/00-bootstrap/specs/trip-domain/: spec.md
openspec/changes/01-rabbit-consumer/: design.md  proposal.md  tasks.md
openspec/changes/01-rabbit-consumer/specs/rabbit-consumer/: spec.md
openspec/changes/02-message-validation/: tasks.md
openspec/changes/02-message-validation/specs/message-validation/: spec.md
openspec/changes/03-trip-processing/: tasks.md
openspec/changes/03-trip-processing/specs/trip-processing/: spec.md
openspec/changes/04-persistence/: design.md  tasks.md
openspec/changes/04-persistence/specs/persistence/: spec.md
openspec/changes/05-dashboard/: design.md
openspec/changes/05-dashboard/specs/dashboard/: spec.md
openspec/changes/06-operations/: design.md  proposal.md  tasks.md
openspec/changes/06-operations/specs/operations/: spec.md
openspec/changes/07-usuario-viajes/: proposal.md  tasks.md
openspec/changes/07-usuario-viajes/specs/usuario-viajes/: spec.md
openspec/changes/08-ack-validacion-error/: design.md
openspec/changes/08-ack-validacion-error/specs/message-validation/: spec.md
openspec/changes/08-ack-validacion-error/specs/operations/: spec.md
openspec/changes/09-align-ts-schema/: design.md  proposal.md  tasks.md
openspec/changes/ack-validacion-error-08/: proposal.md  tasks.md
openspec/changes/align-ts-schema-09/: design.md
openspec/changes/bootstrap-00/: proposal.md
openspec/changes/dashboard-05/: proposal.md  tasks.md
openspec/changes/message-validation-02/: design.md  proposal.md
openspec/changes/operations-06/: tasks.md
openspec/changes/persistence-04/: proposal.md  tasks.md
openspec/changes/require-id-estacion-10/: design.md  proposal.md  tasks.md
openspec/changes/trip-processing-03/: design.md  proposal.md
openspec/changes/usuario-viajes-07/: design.md
scripts/: smoke-e2e.ps1
static/dashboard/: app.js  index.html  styles.css
(+6 files in other folders)
