[package]
name = "api"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
adaptadores = { path = "../adaptadores" }
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
config.workspace = true
dominio = { path = "../dominio" }
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower.workspace = true
